[gd_scene load_steps=4 format=3 uid="uid://comt71mvpw22i"]

[ext_resource type="Script" path="res://Nucleus.gd" id="1_7t4xs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywppy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w33io"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.8, 0.929412, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Nucleus" type="VBoxContainer"]
script = ExtResource("1_7t4xs")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0

[node name="VisualPosition" type="Marker2D" parent="Button"]
unique_name_in_owner = true
position = Vector2(49, 42)

[node name="FadeInPanel" type="Panel" parent="Button"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ywppy")

[node name="SelectedPanel" type="Panel" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w33io")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 2
text = "Lv. 0"
horizontal_alignment = 1
